objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>High_End_Product_Rollup__c</fullName>
        <label>High End Product Rollup</label>
        <summarizedField>Project_Line__c.High_End_Product_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Line__c.High_End_Product_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Historical_IGB_License_Number__c</fullName>
        <label>Historical IGB License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hours</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects (Hours)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGB_Approved_Date__c</fullName>
        <label>IGB Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_Inspection__c</fullName>
        <label>IGB Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_License_Denied_Date__c</fullName>
        <formula>Account__r.Active_IGB_Gaming_License__r.License_Denied_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB License Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_License__c</fullName>
        <label>IGB License #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGB_Location_Type__c</fullName>
        <formula>TEXT(Account__r.IGB_Establishment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB Establishment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Meeting_Status__c</fullName>
        <label>IGB Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted to IGB</fullName>
                </value>
                <value>
                    <fullName>IGB Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGB_Office__c</fullName>
        <label>IGB Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IGB_Office</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGB_Status__c</fullName>
        <label>IGB Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted to IGB</fullName>
                </value>
                <value>
                    <fullName>IGB Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Business_Registration_Code_Expiration__c</fullName>
        <label>IL Business Registration Code Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IL_Business_Registration_Code__c</fullName>
        <label>IL Business Registration Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Communication_With_Competitor__c</fullName>
        <label>Initial Communication With Competitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Request_For_Machines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Product Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Approved__c</fullName>
        <label>Municipality Install Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions_for_Approval__c</fullName>
        <formula>&quot;If you are requesting VGTs, please choose the requested number of additional VGTs (1 through 5). If no new VGTs being requested, please put 0. If you are requesting Gaming Area Assets, please click Save to continue.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_Meeting__c</fullName>
        <label>Introduction Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Justification_for_Add__c</fullName>
        <label>Justification for Add</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification_for_Pull__c</fullName>
        <label>Justification for Pull</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Rejected for Performance</fullName>
                </value>
                <value>
                    <fullName>Location Terminated Agreement</fullName>
                </value>
                <value>
                    <fullName>Gaming License Revoked</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification_for_Swap__c</fullName>
        <label>Justification for Swap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_Description__c</fullName>
        <label>Last Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Event_Subject__c</fullName>
        <label>Last Event Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Event_Type__c</fullName>
        <label>Last Event Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_date_to_send_second_term_notice__c</fullName>
        <label>Latest date to send second term notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_date_to_send_term_notice__c</fullName>
        <label>Latest date to send term notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Submitted_Date__c</fullName>
        <formula>Field_Assessment__r.Layout_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layout Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Account__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Submitted_to_City_Clerk__c</fullName>
        <label>Letter Submitted to City Clerk</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lettere_Sent_to_Competitor__c</fullName>
        <label>Date Letter Sent to Competitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Notes__c</fullName>
        <label>Liquor License Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Number__c</fullName>
        <label>Liquor License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Status__c</fullName>
        <label>State Liquor License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Liquor_License_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Gaming_License_Expiration_Date__c</fullName>
        <label>Local Gaming License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Gaming_License_Number__c</fullName>
        <label>Local Gaming License Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Gaming_License__c</fullName>
        <label>Local Gaming License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Achieved__c</fullName>
        <label>Local Liquor License Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Application_Started__c</fullName>
        <label>Local Liquor License Application Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Application_Submitt__c</fullName>
        <label>Local Liquor License Application Submitt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Copy_Received_Date__c</fullName>
        <label>Local Liquor License Copy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Copy_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Liquor License Copy Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Exp_Date__c</fullName>
        <label>Local Liquor License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Hearing__c</fullName>
        <label>Local Liquor License Hearing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Issuing_Authority__c</fullName>
        <label>Local Liquor License Issuing Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Progress__c</fullName>
        <label>Local Liquor License Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Projects__c</fullName>
        <label>Local Liquor License Projects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Status__c</fullName>
        <label>Local Liquor License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License__c</fullName>
        <label>Local Liquor License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Account__r.BillingStreet &amp;BR()&amp;
Account__r.BillingCity &amp;&apos;, &apos;&amp;Account__r.BillingState &amp;&apos; &apos;&amp;Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Delivery_Date__c</fullName>
        <inlineHelpText>Date is entered by each Service Region once location receives the gaming assets.</inlineHelpText>
        <label>Location Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Position__c</fullName>
        <label>Location Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel</fullName>
                </value>
                <value>
                    <fullName>Opposing TO</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Majority_Shareholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Majority Shareholder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mirror_TO_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mirror Previous Layout(Owner/TO Change)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movement_Completed_Date__c</fullName>
        <label>Add : Movement Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipality_Allows_6th_VGT__c</fullName>
        <formula>TEXT(Account__r.MunicipalityLookup__r.Allows_6th_VGT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality Allows 6th VGT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_formula__c</fullName>
        <formula>Account__r.MunicipalityLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nbrof_Project_Lines_Historically_Created__c</fullName>
        <description>Rollup count of child project lines with the criteria that historical created was tagged on the child</description>
        <inlineHelpText>Rollup count of child project lines with the criteria that historical created was tagged on the child</inlineHelpText>
        <label># of Project Lines Historically Created</label>
        <summaryFilterItems>
            <field>Project_Line__c.Historical_Create__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_Gaming_Area_Assets__c</fullName>
        <label>Not Gaming Area Assets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Field Assessment</fullName>
                </value>
                <value>
                    <fullName>IGB Approval</fullName>
                </value>
                <value>
                    <fullName>Install Scheduled</fullName>
                </value>
                <value>
                    <fullName>SGI Project Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Chairs_Requested__c</fullName>
        <label>Number of Chairs Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Stanchions__c</fullName>
        <label>Number of Stanchions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityRelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Related</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects (Opportunity)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Competitor_Termination__c</fullName>
        <label>Original Competitor Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Go_Live_Date__c</fullName>
        <label>Original Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_TUA_Received__c</fullName>
        <label>Original TUA Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership_Structure__c</fullName>
        <label>Ownership Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Operator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects as Partner Operator</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Operator_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Operator (account_</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Partner Operator)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Fulfillment_Date__c</fullName>
        <inlineHelpText>Date is entered by the Burr Ridge Parts Department once order is fulfilled or ships to the appropriate Satellite warehouse.</inlineHelpText>
        <label>Parts Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Licensing_Approval__c</fullName>
        <inlineHelpText>Used for Sales Operations Process Approval</inlineHelpText>
        <label>Pending Licensing Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Submitted__c</fullName>
        <label>Petition Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <formula>Account__r.ShippingStreet &amp;BR()&amp;Account__r.ShippingCity &amp;&apos;, &apos;&amp; Account__r.ShippingState &amp;&apos; &apos;&amp; Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Acreage__c</fullName>
        <label>Potential Acreage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Approval__c</fullName>
        <label>Preliminary Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Age_Days__c</fullName>
        <formula>IF(ISPICKVAL( Project_Status__c , &quot;Closure&quot;),( Project_Completed_Date__c-(DATEVALUE(CreatedDate))),
(TODAY()-(DATEVALUE(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_CaseSafe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project CaseSafe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Completed_Date__c</fullName>
        <label>Project Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff__c</fullName>
        <label>Project Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Rank__c</fullName>
        <label>Project Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Record_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Field Assessment</fullName>
                </value>
                <value>
                    <fullName>Equipment Allocation</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Executive Approval</fullName>
                </value>
                <value>
                    <fullName>Letter Agreement</fullName>
                </value>
                <value>
                    <fullName>Warehouse Prep</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pull Scheduled</fullName>
                </value>
                <value>
                    <fullName>Go-Live</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Process</fullName>
                </value>
                <value>
                    <fullName>Pending Licensing</fullName>
                </value>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Field Assessment</fullName>
                </value>
                <value>
                    <fullName>IGB Approval</fullName>
                </value>
                <value>
                    <fullName>Install Scheduled</fullName>
                </value>
                <value>
                    <fullName>SGI Project Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Regional Approval</fullName>
                </value>
                <value>
                    <fullName>Parts Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Pending Location Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                    <isActive>false</isActive>
                    <label>Closed Lost</label>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                    <isActive>false</isActive>
                    <label>Initiation</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                    <isActive>false</isActive>
                    <label>Lost</label>
                </value>
                <value>
                    <fullName>Pre-Initiation</fullName>
                    <isActive>false</isActive>
                    <label>Pre-Initiation</label>
                </value>
                <value>
                    <fullName>Prerequisites</fullName>
                    <isActive>false</isActive>
                    <label>Prerequisites</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Submitted_Date__c</fullName>
        <label>Project Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Time_to_Live__c</fullName>
        <formula>Close_Date__c   -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Time to Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-None-</fullName>
                    <default>true</default>
                    <label>-None-</label>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Reconfigure &amp; Addition</fullName>
                </value>
                <value>
                    <fullName>Reconfigure</fullName>
                </value>
                <value>
                    <fullName>Reconfigure &amp; Removal</fullName>
                </value>
                <value>
                    <fullName>Reconfigure &amp; Swap</fullName>
                </value>
                <value>
                    <fullName>Reinstall</fullName>
                </value>
                <value>
                    <fullName>Reinstall in New Area</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Swap &amp; Addition</fullName>
                </value>
                <value>
                    <fullName>Swap &amp; Removal</fullName>
                </value>
                <value>
                    <fullName>Emergency Movement</fullName>
                </value>
                <value>
                    <fullName>Service Swap</fullName>
                </value>
                <value>
                    <fullName>Gaming Machines</fullName>
                </value>
                <value>
                    <fullName>Gaming Area Assets</fullName>
                </value>
                <value>
                    <fullName>Amusements</fullName>
                </value>
                <value>
                    <fullName>Standalone ATM</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Wall System</fullName>
                </value>
                <value>
                    <fullName>Merger &amp; Acquisition</fullName>
                </value>
                <value>
                    <fullName>Full Site Removal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Add__c</fullName>
        <label>Proposed Add</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Reconfig__c</fullName>
        <label>Proposed Reconfig</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Swap__c</fullName>
        <label>Proposed Swap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Revenue_Date__c</fullName>
        <description>The date the revenue is considered qualified for sales purposes.</description>
        <inlineHelpText>For Organic accounts, this date is initially equal to the date the IGB application is submitted.
For Competitor accounts, this date is initially equal to the date the project was created.</inlineHelpText>
        <label>Qualified Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTT_Approved_Date__c</fullName>
        <label>RTT Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTT_Scheduled_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTT Scheduled/Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTT_Submitted_Date__c</fullName>
        <label>RTT Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RT_Swap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be selected if the swap related project includes an RT Swap</description>
        <inlineHelpText>to be selected if the swap related project includes an RT Swap</inlineHelpText>
        <label>RT Add/Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Reconfigure__c</fullName>
        <label>Reason for Reconfigure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>